@@ -3,14 +3,15 @@
 b_chill
 bdtee
 bk_daemon
+bk_funi
+bk_pty
+bk_trunc
+bkrelay
 bttcp
 genrand
 mmcat
 proto
+runsize
 timeout
 tmp
 tmp.c
-bk_funi
-runsize
-bk_trunc
-bkrelay
