@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: Makefile,v 1.32 2004/12/22 20:15:46 dupuy Exp $
+# $Id: Makefile,v 1.33 2005/01/20 21:31:36 jtt Exp $
 #
 # ++Copyright LIBBK++
 #
@@ -25,12 +25,13 @@ BK_SIMPLE_INTERNALPROGS=		\
 # programs for testing things.  Test programs that provide a regression suite
 # for a set of libbk features should be committed to ../test.
 BK_SIMPLE_PROGS=			\
-	bkrelay				\
 	b_chill				\
 	bdtee				\
 	bk_daemon			\
 	bk_funi				\
+	bk_pty				\
 	bk_trunc			\
+	bkrelay				\
 	bttcp				\
 	genrand				\
 	mmcat				\
