@@ -1,3 +1,8 @@
+2005-01-20  James Tanis  <jtt@cheviot.sysdetect.com>
+
+	* lib/b_run.c (bk_run_once): Protect against the generally
+	unwanted situatio of deadlock in select(2).
+
 2005-01-18  James Tanis  <jtt@cheviot.sysdetect.com>
 
 	* lib/b_exec.c (bk_pipe_to_process): Flag to allow child process
